# py-power-profile

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: power.yml
py_power_profile/: __init__.py  badge.py  cli.py  config.py  reporter.py  tracer.py  utils.py
py_power_profile/backends/: __init__.py  base.py  hwmon.py  mock.py  psutil_est.py  rapl.py
samples/: quick.py
tests/: __init__.py  test_badge.py  test_compare.py  test_tracer.py
