[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-power-profile"
version = "0.1.0"
description = "Profile and visualize energy consumption of Python code"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "sherin joseph roy", email = "sherin.joseph2217@gmail.com"}
]
keywords = ["energy", "profiling", "power", "performance", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Hardware",
    "Topic :: Utilities",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
rapl = ["pyrapl>=0.1.0"]
arm = []
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
py-power = "py_power_profile.cli:app"

[project.urls]
Homepage = "https://github.com/Sherin-SEF-AI/py-power-profile"
Repository = "https://github.com/Sherin-SEF-AI/py-power-profile"
Issues = "https://github.com/Sherin-SEF-AI/py-power-profile/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["py_power_profile*"]

[tool.setuptools.package-data]
py_power_profile = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I", "N", "W", "B", "C4", "UP", "ARG", "SIM", "TCH", "TID", "Q"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short" 